--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:text="@string/Bank2"
         android:textAlignment="center"
         android:textColor="#682727"
-        android:textSize="25sp" />/>
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/textViewBank3"
