--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0"
         android:background="#DFA9A9"
         android:gravity="center_horizontal"
         android:shadowColor="#A65959"
@@ -32,6 +32,14 @@
         android:textColor="#831212"
         android:textSize="25sp" />
 
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text="Add bank to favourites?"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
     <TextView
         android:id="@+id/textViewBank2"
         android:layout_width="match_parent"
@@ -44,6 +52,13 @@
         android:textColor="#682727"
         android:textSize="25sp" />
 
+    <Switch
+        android:id="@+id/switch3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text="Add bank to favourites?" />
+
     <TextView
         android:id="@+id/textViewBank3"
         android:layout_width="match_parent"
@@ -55,5 +70,12 @@
         android:textAlignment="center"
         android:textColor="#800D0D"
         android:textSize="25sp"
-        tools:ignore="TextContrastCheck" />/>
+        tools:ignore="TextContrastCheck" />
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text="Add bank to favourites?" />
+
 </LinearLayout>
