--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,75 +7,88 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/textViewTitle"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:background="#DFA9A9"
-        android:gravity="center_horizontal"
-        android:shadowColor="#A65959"
-        android:text="@string/Title"
-        android:textAlignment="center"
-        android:textColor="#A62525"
-        android:textSize="35sp" />
+        android:layout_height="match_parent"
+        android:layout_weight="0">
 
-    <TextView
-        android:id="@+id/textViewBank1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="#D89494"
-        android:gravity="center_horizontal"
-        android:text="@string/Bank1"
-        android:textAlignment="center"
-        android:textColor="#831212"
-        android:textSize="25sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Switch
-        android:id="@+id/switch2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="Add bank to favourites?"
-        tools:ignore="DuplicateSpeakableTextCheck" />
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="#DFA9A9"
+                android:gravity="center_horizontal"
+                android:shadowColor="#A65959"
+                android:text="@string/Title"
+                android:textAlignment="center"
+                android:textColor="#A62525"
+                android:textSize="35sp" />
 
-    <TextView
-        android:id="@+id/textViewBank2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="#B18A8A"
-        android:gravity="center_horizontal"
-        android:text="@string/Bank2"
-        android:textAlignment="center"
-        android:textColor="#682727"
-        android:textSize="25sp" />
+            <TextView
+                android:id="@+id/textViewBank1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#D89494"
+                android:gravity="center_horizontal"
+                android:text="@string/Bank1"
+                android:textAlignment="center"
+                android:textColor="#831212"
+                android:textSize="25sp" />
 
-    <Switch
-        android:id="@+id/switch3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="Add bank to favourites?" />
+            <Switch
+                android:id="@+id/switch2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:text="Add bank to favourites?"
+                tools:ignore="DuplicateSpeakableTextCheck" />
 
-    <TextView
-        android:id="@+id/textViewBank3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="#B56666"
-        android:gravity="center_horizontal"
-        android:text="@string/Bank3"
-        android:textAlignment="center"
-        android:textColor="#800D0D"
-        android:textSize="25sp"
-        tools:ignore="TextContrastCheck" />
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:text="Add bank to favourites?" />
+            <TextView
+                android:id="@+id/textViewBank2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#B18A8A"
+                android:gravity="center_horizontal"
+                android:text="@string/Bank2"
+                android:textAlignment="center"
+                android:textColor="#682727"
+                android:textSize="25sp" />
+
+            <Switch
+                android:id="@+id/switch3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:text="Add bank to favourites?" />
+
+            <TextView
+                android:id="@+id/textViewBank3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#B56666"
+                android:gravity="center_horizontal"
+                android:text="@string/Bank3"
+                android:textAlignment="center"
+                android:textColor="#800D0D"
+                android:textSize="25sp"
+                tools:ignore="TextContrastCheck" />
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:text="Add bank to favourites?" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
