--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -101,14 +102,16 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
 
-                    android:text="Login" />
+                    android:text="Login"
+                    app:backgroundTint="#B33636" />
 
                 <Button
                     android:id="@+id/buttonRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Register" />
+                    android:text="Register"
+                    app:backgroundTint="#8A3131" />
             </LinearLayout>
 
         </LinearLayout>
